serial + log