@@ -46,12 +46,16 @@ deploy {
 					jvmArgs.add('-Dcom.sun.management.jmxremote.ssl=false')
 					jvmArgs.add('-Dcom.sun.management.jmxremote.authenticate=false')
 					jvmArgs.add("-Djava.rmi.server.hostname=${IPS[0]}")
+
+					jvmArgs.add("-XX:+UseSerialGC")
 					jvmArgs.add("-XX:+UnlockExperimentalVMOptions")
 					jvmArgs.add("-XX:MaxGCPauseMillis=50")
 					jvmArgs.add("-XX:GCTimeRatio=5")
 					jvmArgs.add("-Xmx" + MAX_JAVA_HEAP_SIZE_MB + "M")
 					jvmArgs.add("-Xms" + MAX_JAVA_HEAP_SIZE_MB + "M")
 					jvmArgs.add("-XX:+AlwaysPreTouch")
+
+					jvmArgs.add("-Xlog:gc")
 				}
 
 				// Static files artifact
